commit comment, follow, profile, view

--- a/frontend-client/frontend-client/src/pages/user/homePage/home.scss
+++ b/frontend-client/frontend-client/src/pages/user/homePage/home.scss
@@ -2,7 +2,7 @@
 @import "styles/pages/all";
 
 
-$primary-color: #007bff;
+$primary-color: #21afda;
 $secondary-color: #064e9a;
 $hot-badge-color: red;
 $rating-color: #f39c12;
@@ -42,7 +42,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: center;
   margin-top: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
 }
 
 .see-more-button {
