--- a/frontend-client/frontend-client/src/pages/user/theme/footer/footer.scss
+++ b/frontend-client/frontend-client/src/pages/user/theme/footer/footer.scss
@@ -4,17 +4,25 @@
 
 .footer {
     background: #F3F6FA;
-    padding-top: 10px;
+    padding-top: 30px;
     padding-bottom: 0;
 
     .footer__about {
         margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
         img {
             cursor: pointer;
-            width: 150px;
+            width: 100px;
+            margin-bottom: 10px;
         }
+
         .footer__about_logo {
-            display: inline-block;
+            display: flex;
+            justify-content: center;
+            width: 100%;
         }
 
         ul li {
@@ -28,6 +36,7 @@
     .footer__widget {
         margin-bottom: 30px;
         overflow: hidden;
+
         ul {
             float: left;
             width: 50%;
@@ -41,25 +50,29 @@
                     line-height: 32px;
                     text-decoration: none;
                 }
-                :hover{
-                    color: map.get($theme-colors, "header-menu");
+
+                :hover {
+                    color: map.get($theme-colors, "main");
                 }
             }
         }
-        
+
     }
-    .footer_widget_social{
+
+    .footer_widget_social {
         display: flex;
         align-items: center;
         column-gap: 10px;
         margin-top: 20px;
-        div{
-            :hover{
+
+        div {
+            :hover {
                 background: map.get($theme-colors, "main");
                 color: #E5E5E5;
                 border-color: #E5E5E5;
             }
-            svg{
+
+            svg {
                 font-size: 20px;
                 padding: 10px;
                 color: #404040;
@@ -85,21 +98,26 @@
                 padding-left: 10px;
                 color: map.get($theme-colors, "normal-text");
                 height: 46px;
-                border: 1px solid #E5E5E5;
+                border: 1px solid #c4c4c4;
 
                 ::placeholder {
                     color: map.get($theme-colors, "normal-text");
                 }
             }
+            
 
             button {
                 padding: 0 26px;
                 height: 46px;
+                border-radius: 4px;
                 min-width: max-content;
+                background: map.get($theme-colors, "main");
                 cursor: pointer;
             }
-            .button-submit:hover{
-                background: map.get($theme-colors, "main");
+
+            .button-submit:hover {
+                background-color: darken(#21afda, 10%);
+                transition: background 0.3s;
             }
         }
     }
