--- a/frontend-client/frontend-client/src/component/Card/bookDetailCard.scss
+++ b/frontend-client/frontend-client/src/component/Card/bookDetailCard.scss
@@ -1,7 +1,7 @@
 @use "sass:map";
 @import "styles/pages/all";
 
-$primary-color: #007bff;
+$primary-color: #21afda;
 $secondary-color: #064e9a;
 $hot-badge-color: red;
 $rating-color: #f39c12;
@@ -15,7 +15,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   box-shadow: $box-shadow-light;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 190px;
+  width: 200px;
   min-height: 340px;
   cursor: pointer;
   display: flex;
@@ -29,7 +29,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
 
   .book-img {
     width: 100%;
-    height: 250px; 
+    height: 250px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -40,7 +40,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
     .badge-time,
     .badge-hot {
       position: absolute;
-      top: 10px;
+      top: 5px;
       padding: 5px 8px;
       font-size: 12px;
       border-radius: 5px;
@@ -60,7 +60,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   .book-info {
-    padding: 10px;
+    padding: 5px;
     flex-grow: 1;
 
     h4 {
@@ -71,6 +71,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
       overflow: hidden;
       text-overflow: ellipsis;
       transition: color 0.3s ease;
+
 
       &:hover {
         color: $primary-color;
