--- a/frontend-client/frontend-client/src/pages/user/theme/header/style.scss
+++ b/frontend-client/frontend-client/src/pages/user/theme/header/style.scss
@@ -5,9 +5,8 @@
 @import "styles/pages/responsive";
 
 
-
 .header_top {
-    background: #d6d4d4;
+    background: #afaeae;
     display: flex;
     align-items: center;
 }
@@ -50,7 +49,7 @@
 .header_top_right {
     display: flex;
     justify-content: flex-end;
-    padding: 10px 0 13px;
+    padding: 10px 0 12px;
     font-size: 20px;
 
     .auth-links {
@@ -102,6 +101,11 @@
                     transition: all 0.3s;
                     background: #E5E5E5;
                     cursor: pointer;
+
+                    &:hover {
+                        background: #007bff;
+                        color: #E5E5E5;
+                    }
                 }
             }
 
@@ -129,13 +133,27 @@
                         color: black;
                         font-weight: 800;
                         font-size: 14px;
+                        transition: all 0.3s;
+
                         &:hover {
-                            background: #f5f5f5;
                             color: #007bff;
                         }
                     }
+
                     &:hover {
-                        background: #f5f5f5;
+                        background: #c3c2c2;
+                        border-radius: 8px;
+                    }
+
+                    .logout-btn {
+                        color: black;
+                        font-weight: 800;
+                        font-size: 14px;
+                        transition: all 0.3s;
+
+                        &:hover {
+                            color: #007bff;
+                        }
                     }
                 }
 
@@ -214,7 +232,7 @@
         }
 
         .header_menu_dropdown {
-            background: #dadada;
+            background: #c9c8c8;
             display: grid;
             grid-template-columns: repeat(4, 1fr); // Chia thành 4 cột
             position: absolute;
@@ -263,7 +281,7 @@
     right: 20px;
     width: 50px;
     height: 50px;
-    background: #007bff;
+    background: #21afda;
     color: white;
     border: none;
     border-radius: 50%;
@@ -383,6 +401,12 @@
             cursor: pointer;
             background: map.get($theme-colors, "main");
             border: none;
+            border-radius: 4px;
+
+            &:hover {
+                background: #1d83a2;
+                transition: background 0.3s;
+            }
         }
     }
 
@@ -444,6 +468,7 @@
 
     .hero-search {
         display: grid;
+        margin-top: -20px;
     }
 
     .header_logo {
@@ -452,6 +477,7 @@
 
     .hero-search-form {
         width: 565px !important;
+
     }
 
     .hero-search-phone {
@@ -465,12 +491,18 @@
 }
 
 @include Responsive($SMALL_DEVICE) {
-    .hero-search-phone {
-        margin-bottom: 30px;
-    }
 
     .hero-search-form {
         width: 350px !important;
+
+        input {
+            width: 60% !important;
+            font-size: 14px !important;
+        }
+
+        button {
+            font-size: 12px !important;
+        }
     }
 
     .footer {
