--- a/frontend-client/frontend-client/src/pages/user/ProfileUserPage/ProfileUserPage.scss
+++ b/frontend-client/frontend-client/src/pages/user/ProfileUserPage/ProfileUserPage.scss
@@ -70,8 +70,8 @@
         .book-list {
             display: flex;
             flex-wrap: wrap;
-            gap: 16px;
-            justify-content: flex-start;
+            gap: 15px;
+            justify-content: center;
         }
     }
 }
