--- a/frontend-client/frontend-client/src/component/Book/Featured/FeaturedBooks.scss
+++ b/frontend-client/frontend-client/src/component/Book/Featured/FeaturedBooks.scss
@@ -11,31 +11,31 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
 
 .featured-list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 15px;
-  justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(10px, 1fr));
+  margin-left: 100px;
 }
 
-  .react-tabs {
-    ul {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-bottom: 20px;
-    }
 
-    li {
-      list-style: none;
-      font-size: 14px;
-      color: $text-color;
-      display: inline-block;
-      margin: 10px;
-      font-weight: 550;
-      cursor: pointer;
-      transition: color 0.3s ease;
+.react-tabs {
+  ul {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
 
-      &:hover {
-        color: $primary-color;
-      }
+  li {
+    list-style: none;
+    font-size: 14px;
+    color: $text-color;
+    display: inline-block;
+    margin: 10px;
+    font-weight: 550;
+    cursor: pointer;
+    transition: color 0.3s ease;
+
+    &:hover {
+      color: $primary-color;
     }
   }
+}
