--- a/frontend-client/frontend-client/src/pages/user/homePage/home.scss
+++ b/frontend-client/frontend-client/src/pages/user/homePage/home.scss
@@ -61,9 +61,9 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100% !important;
     padding: 0 15px;
   }
-
+  
   .featured-list {
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    margin-left: 130px;
   }
 }
 
