update api and client

--- a/frontend-client/frontend-client/src/component/Book/Card/bookDetailCard.scss
+++ b/frontend-client/frontend-client/src/component/Book/Card/bookDetailCard.scss
@@ -82,7 +82,21 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
     p {
       font-size: 12px;
       color: #666;
+      cursor: pointer;
       min-height: 24px;
+
+      &.has-chapter {
+        font-size: 12px;
+        font-weight: 500;
+        color: #007bff;
+        z-index: 9999;
+        text-decoration: underline;
+        transition: color 0.3s ease-in-out;
+
+        &:hover {
+          color: #0056b3;
+        }
+      }
     }
 
     .rating {
@@ -152,7 +166,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
       flex-grow: 1;
 
       h4 {
-        font-size: 14px;
+        font-size: 16px;
         font-weight: bold;
         margin-bottom: 5px;
         white-space: nowrap;
@@ -163,12 +177,6 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
         &:hover {
           color: $primary-color;
         }
-      }
-
-      p {
-        font-size: 12px;
-        color: #666;
-        min-height: 24px;
       }
 
       .rating {
