--- a/frontend-client/frontend-client/src/component/Action/ChatboxButton/ChatBox.scss
+++ b/frontend-client/frontend-client/src/component/Action/ChatboxButton/ChatBox.scss
@@ -134,7 +134,8 @@ $box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
             color: white;
             cursor: pointer;
             border-radius: 5px;
-            margin-left: 10px;
+            margin-left: 5px;
+            width: 50px;
             font-size: 14px;
             transition: background 0.3s ease, transform 0.3s ease;
 
