--- a/frontend-client/frontend-client/src/component/Header/SearchBar/search.scss
+++ b/frontend-client/frontend-client/src/component/Header/SearchBar/search.scss
@@ -5,8 +5,11 @@
 
 .hero-search-container {
   position: relative;
+  z-index: 9999999;
 
   .hero-search-form {
+    position: relative;
+    z-index: 9999999;
     width: 600px;
     height: 5px;
     float: left;
@@ -57,11 +60,11 @@
     top: 65%;
     left: 0;
     width: 105%;
-    background-color: #e1e1e1;
+    background: #e1e1e1;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    z-index: 99999;
+    z-index: 9999999;
     max-height: 400px;
     overflow-y: auto;
     padding: 15px;
@@ -465,7 +468,7 @@
     .hero-search-results {
       position: absolute;
       left: -18%;
-      width: 105%;
+      width: 110%;
       background-color: #e1e1e1;
       border: 1px solid #c3c3c3;
       border-radius: 8px;
