--- a/frontend-client/frontend-client/src/pages/theme/header/style.scss
+++ b/frontend-client/frontend-client/src/pages/theme/header/style.scss
@@ -118,7 +118,7 @@
                 box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
                 width: 200px;
                 padding: 10px;
-                z-index: 100;
+                z-index: 999999999;
 
                 li {
                     display: flex;
