--- a/frontend-client/frontend-client/src/component/Book/Card/bookDetailCard.scss
+++ b/frontend-client/frontend-client/src/component/Book/Card/bookDetailCard.scss
@@ -97,7 +97,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
     p {
       margin: 7px 0;
       font-size: 12px;
-      z-index: 999999;
+      z-index: 99999999;
       color: #333;
       cursor: pointer;
 
@@ -276,7 +276,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
 
       p {
         font-size: 12px;
-        z-index: 999999;
+        z-index: 99999999;
         color: #666;
         min-height: 24px;
       }
@@ -364,6 +364,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
         font-size: 12px;
         color: #666;
         min-height: 24px;
+        z-index: 99999999;
       }
 
       .rating {
@@ -440,6 +441,7 @@ $box-shadow-light: 0 4px 8px rgba(0, 0, 0, 0.1);
         font-size: 12px;
         color: #666;
         min-height: 24px;
+        z-index: 99999999;
       }
 
       .rating {
