--- a/frontend-admin/frontend-admin/src/styles/pages/styleForm.scss
+++ b/frontend-admin/frontend-admin/src/styles/pages/styleForm.scss
@@ -48,6 +48,7 @@
         border: 1px solid #ddd;
         border-radius: 5px;
         font-size: 14px;
+        height: 57px;
         background: white;
         color: black;
         appearance: none;
