--- a/frontend-admin/frontend-admin/src/styles/pages/styleForm.scss
+++ b/frontend-admin/frontend-admin/src/styles/pages/styleForm.scss
@@ -26,8 +26,9 @@
     background: #fff;
     padding: 20px;
     border-radius: 8px;
-    width: 90%;
-    max-width: 400px;
+    width: 100%;
+    height: 100%;
+    max-width: 500px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
     text-align: center;
 
