--- a/frontend-client/frontend-client/src/component/Action/ChatboxButton/ChatBox.scss
+++ b/frontend-client/frontend-client/src/component/Action/ChatboxButton/ChatBox.scss
@@ -40,6 +40,23 @@
         opacity: 0.8;
       }
     }
+
+    .header-controls {
+      display: flex;
+      align-items: center;
+
+      .clear-icon {
+        margin-right: 12px;
+        cursor: pointer;
+        font-size: 16px;
+        color: #ccc;
+        transition: color 0.2s;
+
+        &:hover {
+          color: #ff6b6b;
+        }
+      }
+    }
   }
 
   .chatbox-body {
